--- a/jemdoc.css
+++ b/jemdoc.css
@@ -1,5 +1,3 @@
-/* Default css file for jemdoc. */
-
 table#tlayout {
     border: none;
     border-collapse: separate;
@@ -9,9 +7,8 @@ table#tlayout {
 body {
 	background: white;
 	font-family: Georgia, serif;
-	padding-bottom: 10px;
+	padding-bottom: 8px;
 	margin: 0;
-	font-size: 14px;
 }
 
 #layout-menu {
@@ -57,9 +54,8 @@ pre, tt {
 }
 
 a, a > tt {
-	#color: #224b8d;
-	color:#0000FF;
-	#text-decoration: none;
+	color: #224b8d;
+	text-decoration: none;
 }
 
 a:hover {
@@ -67,14 +63,12 @@ a:hover {
 }
 
 #layout-menu a.current:link, #layout-menu a.current:visited {
-	#color: #022b6d;
-	color:#0000FF;
+	color: #022b6d;
 	border-bottom: 1px gray solid;
 }
 #layout-menu a:link, #layout-menu a:visited, #layout-menu a:hover {
-	#color: #527bbd;
-	color:#0000FF;
-	#text-decoration: none;
+	color: #527bbd;
+	text-decoration: none;
 }
 #layout-menu a:hover {
 	text-decoration: none;
@@ -121,8 +115,7 @@ strong {
 
 
 h1, h2, h3 {
-	#color: #527bbd;
-	color:#000000;
+	color: #527bbd;
 	margin-top: 0.7em;
 	margin-bottom: 0.3em;
 	padding-bottom: 0.2em;
@@ -180,7 +173,7 @@ div#footer-text {
 
 ul, ol, dl {
 	margin-top: 0.2em;
-	padding-top: 0em;
+	padding-top: 0;
 	margin-bottom: 0.8em;
 }
 
@@ -220,7 +213,7 @@ ol {
 }
 
 li p, dd p {
-	margin-bottom: 0.8em;
+	margin-bottom: 0.3em;
 }
 
 
